# vaultkeeper

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  config.example.toml  docker-compose.smoke.yml  docker-compose.yml
.github/workflows/: ci.yml
docs/: announcement.md
docs/superpowers/plans/: 2026-07-13-vaultkeeper-01-core.md  2026-07-13-vaultkeeper-02-engines.md  2026-07-14-vaultkeeper-03-scheduler.md  2026-07-14-vaultkeeper-04-restore-verify.md  2026-07-14-vaultkeeper-05-container.md  2026-07-14-vaultkeeper-06-tui-launch.md
docs/superpowers/specs/: 2026-07-13-vaultkeeper-design.md
scripts/: smoke-config.toml  smoke-seed.sql  smoke-supabase.sh  smoke.sh
scripts/smoke-api/v1/projects/smoke-project/config/: auth
scripts/smoke-functions/hello/: index.ts
src/: config.rs  crypto.rs  exec.rs  main.rs  notify.rs  pipeline.rs  restic.rs  schedule.rs  scheduler.rs  store.rs  types.rs  util.rs
src/engines/: mod.rs  mongodb.rs  postgres.rs  supabase_functions.rs  supabase_storage.rs
src/tui/: data.rs  input.rs  mod.rs  state.rs  ui.rs
tests/: cli.rs  e2e_restic.rs
