[package]
name = "vaultkeeper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Self-hosted backup orchestrator for Supabase, PostgreSQL, and MongoDB with restic repositories"
repository = "https://github.com/salq791/vaultkeeper"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
wait-timeout = "0.2"
croner = "2"
chrono = "0.4"
aws-config = "1"
aws-sdk-sesv2 = "1"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
