[package]
name = "vaultkeeper"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Self-hosted backup orchestrator for Supabase, PostgreSQL, and MongoDB with restic repositories"
repository = "https://github.com/salq791/vaultkeeper"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
wait-timeout = "0.2"
croner = "2"
chrono = "0.4"
chrono-tz = "0.10"
aws-config = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sesv2 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
url = "2"
percent-encoding = "2"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "layout-cache", "underline-color"] }
tempfile = "3"
